--- a/Celbridge/CoreApplication/Celbridge.Projects/Celbridge.Projects.csproj
+++ b/Celbridge/CoreApplication/Celbridge.Projects/Celbridge.Projects.csproj
@@ -10,10 +10,12 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-	<PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" />
+    <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="sqlite-net-pcl" />
-	<PackageReference Include="Uno.Extensions.Localization.WinUI" />
-	<PackageReference Include="Uno.WinUI" />
+    <PackageReference Include="Uno.Extensions.Localization.WinUI" />
+    <PackageReference Include="Uno.WinUI" />
   </ItemGroup>
 
   <ItemGroup>
