Initial version of EntityService, EntitySchemaService and EntityPrototypeService

--- a/Celbridge/Celbridge/Celbridge.csproj
+++ b/Celbridge/Celbridge/Celbridge.csproj
@@ -32,10 +32,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\Modules\Workspace\Celbridge.Entities\Prototypes\**" Link="Prototypes\%(RecursiveDir)%(FileName)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Modules\Workspace\Celbridge.Entities\Schemas\**" Link="Schemas\%(RecursiveDir)%(FileName)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- To include content from a library project, you have to both copy it in the library project and link to it here in the executable project -->
     <Content Include="..\Modules\Workspace\Celbridge.Documents\preview\**" Link="preview\%(RecursiveDir)%(FileName)%(Extension)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="..\Modules\Workspace\Celbridge.Documents\monaco\**" Link="monaco\%(RecursiveDir)%(FileName)%(Extension)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
