--- a/Celbridge/Modules/Workspace/Celbridge.Workspace/Celbridge.Workspace.csproj
+++ b/Celbridge/Modules/Workspace/Celbridge.Workspace/Celbridge.Workspace.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Celbridge.Console\Celbridge.Console.csproj" />
     <ProjectReference Include="..\Celbridge.Documents\Celbridge.Documents.csproj" />
+    <ProjectReference Include="..\Celbridge.Entities\Celbridge.Entities.csproj" />
     <ProjectReference Include="..\Celbridge.Explorer\Celbridge.Explorer.csproj" />
     <ProjectReference Include="..\Celbridge.GenerativeAI\Celbridge.GenerativeAI.csproj" />
     <ProjectReference Include="..\Celbridge.Inspector\Celbridge.Inspector.csproj" />
