--- a/Celbridge/Modules/Activities/Celbridge.Screenplay/Celbridge.Screenplay.csproj
+++ b/Celbridge/Modules/Activities/Celbridge.Screenplay/Celbridge.Screenplay.csproj
@@ -27,6 +27,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Components\Line.json" />
+    <EmbeddedResource Include="Assets\Components\Empty.json" />
+    <EmbeddedResource Include="Assets\Components\Markdown.json" />
+    <EmbeddedResource Include="Assets\Components\Scene.json" />
+    <EmbeddedResource Include="Assets\Components\ScreenplayActivity.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\CoreServices\Celbridge.BaseLibrary\Celbridge.BaseLibrary.csproj" />
   </ItemGroup>
 
