Move Celbridge.Screenplay project up to Celbridge/Modules folder

--- a/Celbridge/Celbridge/Celbridge.csproj
+++ b/Celbridge/Celbridge/Celbridge.csproj
@@ -77,7 +77,7 @@
 
   <!-- Modules -->
   <ItemGroup>
-    <ProjectReference Include="..\Modules\Activities\Celbridge.Screenplay\Celbridge.Screenplay.csproj" />
+    <ProjectReference Include="..\Modules\Celbridge.Screenplay\Celbridge.Screenplay.csproj" />
   </ItemGroup>
 
   <!-- Extensions -->
