--- a/Celbridge/Modules/Celbridge.Markdown/Celbridge.Markdown.csproj
+++ b/Celbridge/Modules/Celbridge.Markdown/Celbridge.Markdown.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Celbridge.BaseLibrary\Celbridge.BaseLibrary.csproj" />
+    <ProjectReference Include="..\..\Celbridge.BaseLibrary\Celbridge.BaseLibrary.csproj" />
   </ItemGroup>
 
 </Project>
