Move empty component to new Celbridge.Core module

--- a/Celbridge/Celbridge/Celbridge.csproj
+++ b/Celbridge/Celbridge/Celbridge.csproj
@@ -76,6 +76,7 @@
 
   <!-- Modules -->
   <ItemGroup>
+    <ProjectReference Include="..\Modules\Celbridge.Core\Celbridge.Core.csproj" />
     <ProjectReference Include="..\Modules\Celbridge.Markdown\Celbridge.Markdown.csproj" />
     <ProjectReference Include="..\Modules\Celbridge.Screenplay\Celbridge.Screenplay.csproj" />
   </ItemGroup>
