--- a/Celbridge/Modules/Celbridge.Screenplay/Celbridge.Screenplay.csproj
+++ b/Celbridge/Modules/Celbridge.Screenplay/Celbridge.Screenplay.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\BaseLibrary\Celbridge.BaseLibrary.csproj" />
   </ItemGroup>
 
