--- a/Celbridge/Celbridge/Celbridge.csproj
+++ b/Celbridge/Celbridge/Celbridge.csproj
@@ -64,7 +64,7 @@
 
   <ItemGroup>
     <!-- To include content from a library project, you have to both copy it in the library project and link to it here in the executable project -->
-    <Content Include="..\Workspace\Celbridge.Documents\univer\**" Link="univer\%(RecursiveDir)%(FileName)%(Extension)">
+    <Content Include="..\Workspace\Celbridge.Documents\spreadJS\**" Link="spreadJS\%(RecursiveDir)%(FileName)%(Extension)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
