--- a/Celbridge/Workspace/Celbridge.Documents/Celbridge.Documents.csproj
+++ b/Celbridge/Workspace/Celbridge.Documents/Celbridge.Documents.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Content Include="preview\**" />
-    <Content Include="univer\**" />
+    <Content Include="spreadJS\**" />
     <Content Include="monaco\**" />
     <!-- Excluding these files as they trigger localization warnings during the build process -->
     <Content Remove="monaco\min\vs\base\common\worker\simpleWorker.nls.zh-cn.js" />
