Install pip during embedded Python install

--- a/Celbridge/Workspace/Celbridge.Python/Celbridge.Python.csproj
+++ b/Celbridge/Workspace/Celbridge.Python/Celbridge.Python.csproj
@@ -26,4 +26,14 @@
     <ProjectReference Include="..\..\BaseLibrary\Celbridge.BaseLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="**\__pycache__\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="**\*.dist-info\RECORD">
+      <PRIResource>false</PRIResource>
+    </None>
+  </ItemGroup>
+
 </Project>
