Remove accidentally commited ephemeral files
Added .celbridge to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,6 @@ solution-config.props
 
 # SpreadJS library
 /Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/lib
+
+# Celbridge ephemeral data
+.celbridge/
