--- a/Celbridge/Workspace/Celbridge.Python/Assets/Python/celbridge/pyproject.toml
+++ b/Celbridge/Workspace/Celbridge.Python/Assets/Python/celbridge/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = "hatchling.build"
 [project]
 name = "celbridge"
 version = "0.1.0"
-description = "Example package showing a console script entry point for Celbridge."
+description = "The python engine that powers the Celbridge editor tool."
 readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "MIT" }
-authors = [{ name = "Your Name", email = "you@example.com" }]
-keywords = ["celbridge", "cli", "example"]
+authors = [{ name = "Chris Gregan", email = "chrisgregan@gmail.com" }]
+keywords = ["celbridge"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
@@ -19,16 +19,14 @@ classifiers = [
   "Topic :: Utilities"
 ]
 
-# No third-party dependencies required; stdlib only
 dependencies = []
 
 [project.urls]
-Homepage = "https://example.com/celbridge"
-Repository = "https://github.com/example/celbridge"
-Issues = "https://github.com/example/celbridge/issues"
+Homepage = "https://github.com/AnTulcha/Celbridge"
+Repository = "https://github.com/AnTulcha/Celbridge"
+Issues = "https://github.com/AnTulcha/Celbridge/issues"
 
 [project.scripts]
-# This creates an executable named `celbridge` that calls celbridge.cli:main
 celbridge = "celbridge.cli:main"
 
 [project.optional-dependencies]
